<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_format">Welcome! This is section: %1$d</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="app_name">Kitchen Assistant</string>
    <string name="auto_complete">Autocomplete</string>
    <string name="welcome">Welcome</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">User Image</string>
    <string name="recipes">Recipes</string>
    <string name="notebook">Notebook</string>
    <string name="suggestions">Suggestions</string>
    <string name="meal_board">Meal Board</string>
    <string name="routines">Routines</string>
    <string name="shopping_list">Shopping List</string>
    <string name="food">Food</string>
    <string name="logout">Logout</string>

    <!-- Array items -->
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="appetizer">Appetizer</string>
    <string name="soup">Soup</string>
    <string name="salad">Salad</string>
    <string name="fish">Fish</string>
    <string name="main_course">Main course</string>
    <string name="cheese">Cheese</string>
    <string name="nuts">Nuts</string>
    <string name="fruit">Fruit</string>
    <string name="dessert">Dessert</string>
    <string name="beverage">Beverage</string>
    <string name="chinese">Chinese</string>
    <string name="french">French</string>
    <string name="greek">Greek</string>
    <string name="indian">Indian</string>
    <string name="indonesian">Indonesian</string>
    <string name="italian">Italian</string>
    <string name="japanese">Japanese</string>
    <string name="lebanese">Lebanese</string>
    <string name="mexican">Mexican</string>
    <string name="spanish">Spanish</string>
    <string name="thai">Thai</string>
    <string name="turkish">Turkish</string>
    <string name="arabic">Arabic</string>
    <string name="azerbaijani">Azerbaijani</string>
    <string name="bengali">Bengali</string>
    <string name="cantonese">Cantonese</string>
    <string name="czech">Czech</string>
    <string name="dutch">Dutch</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="hindi">Hindi</string>
    <string name="hungarian">Hungarian</string>
    <string name="javanese">Javanese</string>
    <string name="korean">Korean</string>
    <string name="malay">Malay</string>
    <string name="mandarin">Mandarin</string>
    <string name="persian">Persian</string>
    <string name="polish">Polish</string>
    <string name="portuguese">Portuguese</string>
    <string name="punjabi">Punjabi</string>
    <string name="romanian">Romanian</string>
    <string name="russian">Russian</string>
    <string name="swedish">Swedish</string>
    <string name="urdu">Urdu</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="vietnamese">Vietnamese</string>


    <string name="recipe_image_description">Recipe image</string>
    <string name="recipe_detail">Recipe Detail</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="timer_icon">Timer icon</string>
    <string name="delete">Delete</string>
    <string name="new_recipe">New Recipe</string>
    <string name="overview">Overview</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="click_to_add_a_picture">Click to add a picture</string>
    <string name="dialog_photo_select">Select a source for the picture.</string>
    <string name="no_camera_app">No camera application available.</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="allow_write_external">Can\'t read an image from gallery without permission to external storage.</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="course">Course</string>
    <string name="cuisine">Cuisine</string>
    <string name="language">Written in</string>
    <string name="recipe_title_required">Recipe title is required.</string>
    <string name="rotate_image">Rotate image</string>
    <string name="cook_time_min">Cook time (min.)</string>
    <string name="prep_time_min">Prep time (min.)</string>
    <string name="servings">Servings</string>
    <string name="upload">Upload</string>
    <string name="minutes_abbreviation">%1$d min</string>
</resources>
