<?xml version="1.0" encoding="utf-8"?><!--
Reference
https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-activity-startup/1662088#1662088
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RecipesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/view_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/edit_image_size"
                android:layout_height="@dimen/edit_image_size"
                android:background="@color/divider">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/empty_frame_outline_thickness"
                    android:background="@android:color/white"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_cam_icon"
                    android:layout_width="@dimen/add_picture_hint_size"
                    android:layout_height="@dimen/add_picture_hint_size"
                    android:contentDescription="@string/add_a_picture"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_add_photo" />

                <TextView
                    android:id="@+id/tv_hint_click_to_add"
                    style="@style/TextAppearance.Design.Hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/click_to_add_a_picture"
                    android:textSize="@dimen/edit_recipe_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/iv_recipe_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/empty_frame_outline_thickness"
                    android:contentDescription="@string/recipe_image_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <ImageButton
                    android:id="@+id/btn_rotate"
                    android:layout_width="@dimen/list_button_size"
                    android:layout_height="@dimen/list_button_size"
                    android:layout_marginStart="@dimen/space_one_unit"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/rotate_image"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_rotate_right" />

                <ImageButton
                    android:id="@+id/btn_publish_recipe"
                    android:layout_width="@dimen/list_button_size"
                    android:layout_height="@dimen/list_button_size"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/upload"
                    app:layout_constraintBottom_toTopOf="@id/btn_rotate"
                    app:layout_constraintStart_toStartOf="@+id/btn_rotate"
                    app:srcCompat="@drawable/ic_cloud_upload" />

                <ProgressBar
                    android:id="@+id/progress_bar_publish_recipe"
                    android:layout_width="@dimen/list_button_size"
                    android:layout_height="@dimen/list_button_size"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/btn_rotate"
                    app:layout_constraintStart_toStartOf="@+id/btn_rotate" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/max_length_recipe_title"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_title"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="@integer/max_length_recipe_title"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="@dimen/empty_frame_outline_thickness"
            android:layout_height="@dimen/recipe_overall_divider_length"
            android:background="@color/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_servings"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/input_layout_title"
            app:layout_constraintTop_toTopOf="@+id/divider">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_edit_servings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/servings"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="@integer/max_length_servings"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_prep_time"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/input_layout_servings"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_servings">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_edit_prep_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prep_time_min"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="@integer/max_length_cook_time"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_cook_time"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/input_layout_prep_time"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_prep_time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_edit_cook_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cook_time_min"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="@integer/max_length_cook_time"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/header_course"
            style="@style/TextStyleSpinnerHeader"
            android:text="@string/course"
            app:layout_constraintBottom_toTopOf="@+id/spinner_course"
            app:layout_constraintStart_toStartOf="@+id/spinner_course" />

        <Spinner
            android:id="@+id/spinner_course"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/input_layout_servings"
            app:layout_constraintEnd_toEndOf="@+id/input_layout_title"
            app:layout_constraintTop_toTopOf="@+id/input_layout_servings" />

        <TextView
            android:id="@+id/header_cuisine"
            style="@style/TextStyleSpinnerHeader"
            android:text="@string/cuisine"
            app:layout_constraintBottom_toTopOf="@+id/spinner_cuisine"
            app:layout_constraintStart_toStartOf="@+id/spinner_cuisine" />

        <Spinner
            android:id="@+id/spinner_cuisine"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/input_layout_prep_time"
            app:layout_constraintEnd_toEndOf="@+id/spinner_course"
            app:layout_constraintTop_toTopOf="@+id/input_layout_prep_time" />

        <TextView
            android:id="@+id/header_language"
            style="@style/TextStyleSpinnerHeader"
            android:text="@string/language"
            app:layout_constraintBottom_toTopOf="@+id/spinner_language"
            app:layout_constraintStart_toStartOf="@+id/spinner_language" />

        <Spinner
            android:id="@+id/spinner_language"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/input_layout_cook_time"
            app:layout_constraintEnd_toEndOf="@+id/spinner_cuisine"
            app:layout_constraintTop_toTopOf="@+id/input_layout_cook_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>