<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RecipesFragment">

    <FrameLayout
        android:id="@+id/frame_empty"
        android:layout_width="@dimen/card_image_height"
        android:layout_height="@dimen/card_image_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="@dimen/list_button_size"
        android:layout_height="@dimen/list_button_size"
        android:contentDescription="@string/add_a_picture"
        app:layout_constraintBottom_toBottomOf="@+id/frame_empty"
        app:layout_constraintEnd_toEndOf="@+id/frame_empty"
        app:layout_constraintStart_toStartOf="@+id/frame_empty"
        app:layout_constraintTop_toTopOf="@+id/frame_empty"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/tv_hint_add_picture"
        style="@style/TextAppearance.Design.Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/click_to_add_a_picture"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_recipe_image"
        app:layout_constraintEnd_toEndOf="@+id/iv_recipe_image"
        app:layout_constraintStart_toStartOf="@+id/iv_recipe_image" />

    <ImageView
        android:id="@+id/iv_recipe_image"
        android:layout_width="@dimen/card_image_height"
        android:layout_height="@dimen/card_image_height"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:contentDescription="@string/recipe_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_rotate"
        android:layout_width="@dimen/list_button_size"
        android:layout_height="@dimen/list_button_size"
        android:layout_marginStart="@dimen/space_one_unit"
        android:background="@android:drawable/ic_menu_rotate"
        app:layout_constraintBottom_toBottomOf="@id/iv_recipe_image"
        app:layout_constraintStart_toEndOf="@id/iv_recipe_image" />

</android.support.constraint.ConstraintLayout>